specs/requests/invalid/004.http
GET /foo FTP/1.1


